// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenError renders with only heading 1`] = `
<div>
  <div
    class="tl-error rounded-md bg-red-50 p-4 border border-red-300"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <svg
          class="text-red-700"
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.0003 6.66663V9.99996M10.0003 13.3333H10.0087M18.3337 9.99996C18.3337 14.6023 14.6027 18.3333 10.0003 18.3333C5.39795 18.3333 1.66699 14.6023 1.66699 9.99996C1.66699 5.39759 5.39795 1.66663 10.0003 1.66663C14.6027 1.66663 18.3337 5.39759 18.3337 9.99996Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.66667"
          />
        </svg>
      </div>
      <div
        class="ml-3"
      >
        <h3
          class="tl-error-heading text-sm font-medium text-red-700"
        >
          An Error
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenError renders with text & heading 1`] = `
<div>
  <div
    class="tl-error rounded-md bg-red-50 p-4 border border-red-300"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <svg
          class="text-red-700"
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.0003 6.66663V9.99996M10.0003 13.3333H10.0087M18.3337 9.99996C18.3337 14.6023 14.6027 18.3333 10.0003 18.3333C5.39795 18.3333 1.66699 14.6023 1.66699 9.99996C1.66699 5.39759 5.39795 1.66663 10.0003 1.66663C14.6027 1.66663 18.3337 5.39759 18.3337 9.99996Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.66667"
          />
        </svg>
      </div>
      <div
        class="ml-3"
      >
        <h3
          class="tl-error-heading text-sm font-medium text-red-700"
        >
          An Error
        </h3>
        <div
          class="mt-2 text-sm text-red-500"
        >
          <p
            class="tl-error-text"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur, ipsum similique veniam.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
